--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,61 @@
-i{
-    margin-left: -23px;
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+body{
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
+    display: flex;
+    background-color: #f4f4f4;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.container{
+    background-color: white;
+    width: 300px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    padding: 15px;
+    border-radius: 5px;
+
+}
+h2{
+    text-align: center;
+
+}
+.username{
+    margin-top: 20px;
+}
+.username,
+.password{
+    margin-bottom: 10px;
+}
+
+input{
+    width: 100%;
+    font-size: 14px;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+button{
+    width: 100%;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    padding: 10px;
+}
+
+button:hover{
+    background: #0069d9;
+    cursor: pointer;
+}
+form i{
+    margin-left: -27px;
     cursor: pointer;
 }
